--- a/index.html
+++ b/index.html
@@ -11,67 +11,91 @@
 	<body>
 		<script src="js/three.js"></script>
 		<script>
+    //Initial setup
       var scene = new THREE.Scene();
       var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
       var renderer = new THREE.WebGLRenderer();
       renderer.setSize(window.innerWidth, window.innerHeight);
       document.body.appendChild(renderer.domElement);
+
+    // Meshes
       var cubeGeometry = new THREE.BoxGeometry( 1, 1, 1 );
       var sphereGeometry = new THREE.IcosahedronGeometry(0.5, 2 );
-      var material = new THREE.MeshBasicMaterial( { color: 0x336699 } );
-      var material2 = new THREE.MeshNormalMaterial( { wireframe: true } );
-      let cube = new THREE.Mesh( cubeGeometry, material );
-      let cube2 = new THREE.Mesh( cubeGeometry, material );
+      var heroMaterial = new THREE.MeshLambertMaterial( { color: 0x336699 } );
+      var villainMaterial = new THREE.MeshLambertMaterial( { color: 0xCC0000 } );
+      var bulletMaterial = new THREE.MeshNormalMaterial( { wireframe: true } );
+      let cube = new THREE.Mesh( cubeGeometry, heroMaterial );
+      let cube2 = new THREE.Mesh( cubeGeometry, villainMaterial );
       let rightWall = new THREE.Mesh()
       scene.add(cube2)
       let spheres = []
       cube.position.x = 1
       scene.add( cube );
+    // create a point light
+      var pointLight1 = new THREE.PointLight(0xFFFFFF);
+      var pointLight2 = new THREE.PointLight(0xFFFFFF);
 
+      // set its position
+      pointLight1.position.set(10, 50, 130)
+      pointLight2.position.set(-10, 50, -130)
+      // pointLight.position.x = 10;
+      // pointLight.position.y = 50;
+      // pointLight.position.z = 130;
+
+      // add to the scene
+      scene.add(pointLight1);
+      scene.add(pointLight2);
       window.Scene = scene
 
-      camera.position.z = cube.position.z + 3;
+    // Camera and Render
+      camera.position.z = 3;
+      camera.position.y = 1
+      camera.position.x = 0
+      cube.add(camera)
       function render() {
       	requestAnimationFrame( render );
-        camera.position.z = cube.position.z + 3;
-        camera.position.x = cube.position.x;
-        camera.position.y = cube.position.y + 1;
+
 
         cube2.rotation.x += 0.01;
         // console.log(cube.rotation.x);
         cube2.rotation.y += 0.01;
 
         spheres.forEach((sphere) => {
-          sphere.rotation.y -= 0.01;
-          sphere.position.z -= 1
+          // sphere.rotation.y -= 0.01;
+          // sphere.position.z -= 1
+          sphere.translateZ(1)
         })
       	renderer.render( scene, camera );
       }
       render();
 
+    // Key Listeners for controls
       window.onkeydown = (e) => {
         let key = e.keyCode ? e.keyCode : e.which;
 
         if (key === 37) {
           cube.rotation.y += 0.1
           console.log(cube.rotation.y);
-          // camera.rotation.y = cube.rotation.y
         } else if (key === 38) {
-          cube.position.z -= 0.1
+          cube.translateZ(-0.1)
         } else if (key === 39){
           cube.rotation.y -= 0.1
           console.log(cube.rotation.y);
-          // camera.rotation.y = cube.rotation.y
         } else if (key === 40){
-          cube.position.z += 0.1
+          cube.translateZ(0.1)
         }
         if (key === 32){
-          let sphere = new THREE.Mesh(sphereGeometry, material2);
-          sphere.position.x = cube.position.x
-          sphere.position.y = cube.position.y
-          sphere.position.z = cube.position.z
+          let sphere = new THREE.Mesh(sphereGeometry, bulletMaterial);
+          sphere.position.set(cube.position.x, cube.position.y, cube.position.z)
+          sphere.rotation.set(3.28, 3.28, 3.28)
+
+          sphere.rotation.x = 3.28
+          sphere.rotation.y = 0
+          sphere.rotation.z = 3.28
+          cube.add(sphere)
+          // sphere.rotation.set(cube.rotation.x, cube.rotation.y, cube.rotation.z)
+          // scene.add(sphere)
           spheres.push(sphere)
-          scene.add(sphere)
         }
       }
 
