--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 		<style>
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
+			html { overflow-y: hidden; }
 		</style>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	</head>
