got villains firing and health decrimenting

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,16 @@
 			canvas { width: 100%; height: 100% }
 			html { overflow-y: hidden; }
 		</style>
+		<link rel="stylesheet" type="text/css" href="css/style.css"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	</head>
 	<body>
+		<!-- <div id="game-display"></div> -->
+		<div class="hud"><label>Health:</label> <div id="health">100</div></div>
 		<script src="js/three.js"></script>
 		<script src="js/main.js">
 
 		</script>
+
 	</body>
 </html>
