got outro page/end of game logic working, got screen flashing red when you get hit

--- a/public/index.html
+++ b/public/index.html
@@ -17,19 +17,22 @@
 			<p>Kill all the ghosts before they kill you!</p>
 			<h3>The controls are:</h3>
 			<ul>
-				<li>up_arrow = forward</li>
-				<li>down_arrow = backward</li>
-				<li>right_arrow = turn right</li>
-				<li>left_arrow = turn left</li>
-				<li>space_bar = fire/shoot</li>
+				<li><strong>&#8679;</strong> - forward</li>
+				<li><strong>&#8681;</strong> - backward</li>
+				<li><strong>&#8680;</strong> - turn right</li>
+				<li><strong>&#8678;</strong> - turn left</li>
+				<li>space - fire/shoot</li>
 				<button id="start-game">Start Game!</button>
 			</ul>
 		</div>
-		<div class="hud"><div class="sub-box"><label>Score:</label> <div id="score">0</div></div><div class="sub-box"><label>Health:</label> <div id="health">100</div></div></div>
-		<script src="js/three.js"></script>
-		<script src="js/main.js">
+		<div id="outro-screen">
+		</div>
+		<div id="grey-out">
+			<div class="hud"><div class="sub-box"><label>Score:</label> <div id="score">0</div></div><div class="sub-box"><label>Health:</label> <div id="health">100</div></div></div>
+			<script src="js/three.js"></script>
+			<script src="js/main.js">
 
-		</script>
-
+			</script>
+		</div>
 	</body>
 </html>
