working on styling the intro/outro modals

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,13 @@
 		</style>
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	</head>
+		<link href="https://fonts.googleapis.com/css?family=Ruslan+Display" rel="stylesheet">
+</head>
 	<body>
 		<div id="intro-screen">
-			<h1>Welcome to GhostBlaster</h1>
+			<h1><strong>GHOSTBLASTER</strong></h1>
 			<p>Kill all the ghosts before they kill you!</p>
-			<h3>The controls are:</h3>
+			<h3>Controls:</h3>
 			<ul>
 				<li><strong>&#8679;</strong> - forward</li>
 				<li><strong>&#8681;</strong> - backward</li>
