changed title and some styling

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset=utf-8>
-		<title>My first Three.js app</title>
+		<title>Ghostblaster</title>
 		<style>
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
@@ -11,18 +11,20 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Ruslan+Display" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+</head>
 </head>
 	<body>
 		<div id="intro-screen">
-			<h1><strong>GHOSTBLASTER</strong></h1>
+			<h1>GHOST<i class="b">B</i>LASTER</h1>
 			<p>Kill all the ghosts before they kill you!</p>
-			<h3>Controls:</h3>
+			<h2>Controls:</h2>
 			<ul>
-				<li><strong>&#8679;</strong> - forward</li>
-				<li><strong>&#8681;</strong> - backward</li>
-				<li><strong>&#8680;</strong> - turn right</li>
-				<li><strong>&#8678;</strong> - turn left</li>
-				<li>space - fire/shoot</li>
+				<li><i class="fa fa-arrow-up" style="font-size:24px"></i> - forward</li>
+				<li><i class="fa fa-arrow-down" style="font-size:24px"></i> - backward</li>
+				<li><i class="fa fa-arrow-right" style="font-size:24px"></i> - turn right</li>
+				<li><i class="fa fa-arrow-left" style="font-size:24px"></i> - turn left</li>
+				<li><i>[space]</i> - fire/shoot</li>
 				<button id="start-game">Start Game!</button>
 			</ul>
 		</div>
